Fix layout width bug when link is very long
Fix layout width bug that only happens if link is very long and overflows the container width, i.e. on staging

--- a/src/components/crossDevice/CrossDeviceLink/style.css
+++ b/src/components/crossDevice/CrossDeviceLink/style.css
@@ -1,6 +1,10 @@
 @import (less) "../../Theme/constants.css";
 @parent-width: 432;
 
+.container {
+  width: 100%;
+}
+
 .smsSection {
   height: 76*@unit;
   margin-top: 56*@unit;
